tests/parser/tests/cases/should_fail/unknown_escape_sequence/case.stderr
error: failed to parse
 --> $DIR/case.hash:1:8
1 |   k := '\j';
  |          ^ here
  = note: invalid character escape sequence. Unknown escape sequence `j`
